34 Criando o menu principal

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,6 +10,13 @@ body{
     background: url('../imgs/bg_pagina_167x167.jpg')
 }
 
+div{
+    /* display table se adapta ao seu conteúdo 
+    A declaração display: table faz com que o elemento HTML seja renderizado como tabela. */
+    display: table;
+    width: 100%;
+}
+
 /* estrutura do layout */
 
 .container{
@@ -27,9 +34,51 @@ body{
 .coluna_logomarca{
     width: 270px;
     float:left;
+   
 }
 
 .coluna_menu{
     width: 647px;
     float: right;
+}
+
+/* definições de menu */
+
+.container_menu{
+    background: url('../imgs/bg_menu_1x49.jpg') top repeat-x;
+    box-shadow: 5px 5px 5px black;
+    -webkit-box-shadow: 5px 5px 5px black;
+    -moz-box-shadow: 5px 5px 5px black;
+    -o-box-shadow: 5px 5px 5px black;
+    margin-top: 20px;
+}
+.container_menu a{
+    text-decoration: none;
+    
+    /*display: block
+  A declaração display: block faz com que o elemento HTML seja renderizado como bloco, tal como os parágrafos e os cabeçalhos o são. 
+  Um bloco contém um espaço em branco tanto em cima como embaixo e não permite outros elementos HTML ao lado, exceto quando 
+  tiver sido declarado ao contrário (por exemplo, declarar a propriedade float para o elemento próximo ao bloco). */
+    display: block;
+    float:left;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left:20px;
+    padding-right: 20px;
+    color:black;
+}
+
+/* classes de uso geral */
+
+.bordaArredondada{
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -o-border-radius: 8px;
+}
+
+/* espacamento Inferior*/
+ei{
+
+    margin-bottom: 25px;
 }
